--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -1,100 +1,201 @@
- /* .services {margin:5px 32.8px 4px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:700; font-size:22px; color:#FFFFFF; z-index:1;}
- .governing-body {margin:5px 32.3px 4px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:700; font-size:22px; color:#FFFFFF; z-index:1;}
- .gallery {margin:5px 32.1px 4px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:700; font-size:22px; color:#FFFFFF; z-index:1;}
- .contact-us {margin:5px 0 4px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:700; font-size:22px; color:#FFFFFF; z-index:1;}
- .about-navbar-link {margin-bottom:33px; display:flex; flex-direction:row; width:fit-content; box-sizing:border-box;}
- .vector {transform:rotate(4.52deg); width:33.4px; height:38px;}
- .about-phone-svg {transform:rotate(18.253deg); margin-right:4.7px; display:flex; flex-direction:row; justify-content:center; width:33.4px; height:38px; box-sizing:border-box;}
- .about-phone-number {margin:4px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:25px; color:#FFFFFF; margin-top:5px; display:flex; flex-direction:column; align-items:flex-end; box-sizing:border-box; z-index:1;}
- .about-phone {margin:9px 38.2px 9px 0; display:flex; flex-direction:row; box-sizing:border-box;}
-.about-caption {margin-left:54px; margin-right:65px; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:25px; color:#FFFFFF; text-align:center; width:900px; z-index:1; padding-top:20px;}
- .about-donatebtn {background:#145A98; position:relative; display:flex; flex-direction:row; justify-content:center; padding:13px 18px 12px 18px; box-sizing:border-box; color:#FFFFFF; font-family:'Inter'; font-weight:500; font-size:25px; text-transform:uppercase; overflow-wrap:break-word; border:none;}
- .container {margin:0 0px; display:flex; flex-direction:row; width:fit-content; box-sizing:border-box;}
- .about-navbar {margin-top:4px; display:flex; flex-direction:column; align-items:flex-end; box-sizing:border-box;}
- .about-container {margin-bottom:570.9px; display:flex; flex-direction:row; justify-content:space-between; width:1374px; box-sizing:border-box;}
- .about-heading {margin-right:5.2px; overflow-wrap:break-word; font-family:'Inter'; font-weight:600; font-size:40px; color:#FFFFFF; margin-top:-210px; z-index:1;}
-
- .rectangle-7 {background:url('../../assets/images/rectangle71.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9); margin-right:113px; width:493px; height:497px;}
- .rectangle-9 {background:url('../../assets/images/rectangle91.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9); position:relative; width:493px; height:497px;}
- .container-image-2 {display:flex; flex-direction:row; align-self:flex-start; width:1099px; box-sizing:border-box;}
- .rectangle-8 {background:url('../../assets/images/rectangle81.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9); position:absolute; left:267px; bottom:51px; width:493px; height:497px;}
- .rectangle-10 {background:url('../../assets/images/rectangle101.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9); position:absolute; right:0px; bottom:0px; width:493px; height:497px;}
-
-
-
- .logo-2 {background:url('../../assets/images/logo2.jpeg') 50% / cover no-repeat; margin:0 58px 39px 58px; align-self:flex-start; width:108px; height:109px;}
- .about-donatebtn1 {margin:2px 77.3px 44px 0; display:flex; flex-direction:column; align-items:center; box-sizing:border-box;}
- .lorem-ipsum-dolor {position:relative; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:25px; line-height:1.5; color:#FFFFFF;}
- .group-19 {position:relative; margin-bottom:96px; display:flex; flex-direction:row; justify-content:center; height:188px; box-sizing:border-box;}
- .about-phone-number {display:flex; flex-direction:row; width:fit-content; box-sizing:border-box;}
- .ellipse-19 {position:relative; margin:7.1px 12.6px 0 0; width:34.4px; height:35.4px;}
- .lorem-ipsum-6 {margin:9px 8.5px 5.5px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:23px; color:#FFFFFF;}
- .image-5 {background:url('../../assets/images/image5.png') 50% / cover no-repeat; margin:0 12px 4.5px 0; width:39px; height:38px;}
- .lorem-ipsum-7 {margin:9px 10.5px 5.5px 0; display:inline-block; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:23px; color:#FFFFFF;}
- .image-6 {background:url('../../assets/images/image6.png') 50% / cover no-repeat; margin:0 9px 4.5px 0; width:38px; height:38px;}
- .about-donate-section {margin:9px 0 5.5px 0; display:flex; flex-direction:row; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:23px; color:#FFFFFF;}
- .email-2 {background:url('../../assets/images/email1.png') 50% / cover no-repeat; position:absolute; left:0px; bottom:0px; width:35.8px; height:35.8px;}
- .group-18 {position:relative; margin:0 54.9px 33.5px 54.9px; display:flex; flex-direction:row; align-self:flex-end; padding:0 0 0px 1px; width:fit-content; box-sizing:border-box;}
- .line-1 {background:rgba(255, 255, 255, 0.5); margin-bottom:26px; width:100%; height:1px;}
- .copyright-2024-comapny {margin-right:12px; width:1056.3px; overflow-wrap:break-word; font-family:'Inter'; font-weight:400; font-size:20px; color:#FFFFFF;}
- .powered-by-take-tech-devs {overflow-wrap:break-word; font-family:'Poppins'; font-weight:400; font-size:20px; color:#FFFFFF;}
-.powered-by-take-tech-devs-sub67 {font-family:'Inter'; font-weight:400; font-size:20px; line-height:1.333;}
-.powered-by-take-tech-devs {font-family:'Inter'; font-weight:400; font-size:20px; line-height:1.333; color:#321910;}
- .container-2 {display:flex; flex-direction:row; justify-content:space-between; width:100%; box-sizing:border-box;}
- .about-donatebtn2 {background:#145A98; position:relative; display:flex; flex-direction:column; padding:24px 0 22px 0; width:fit-content; box-sizing:border-box;}
-.circle {width:1000px; height:950px; border-radius:50%; border:8px dashed #82a8c8; margin-top:130px} */
-
-
-
-
 /* Prity's Css START from here */
-.img-section.about{background:url('../../assets/images/rectangle25.png'), linear-gradient(#D9D9D9, #D9D9D9); }
-.commonBanner-wrapper { position:relative; margin-bottom:67px; display:flex; flex-direction:column; align-items:center; padding:34px 35px 80px 31px; width:100%; box-sizing:border-box; justify-content:end; height:100vh;}
-.commonBanner-wrapper.about{background:url('../../assets/images/rectangle41.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);}
-.commonBanner-wrapper h2,  .commonBanner-wrapper p {color:#fff; position:relative; z-index:2;}
-.commonBanner-wrapper h2 {font-size:4vw;}
-.commonBanner-wrapper::before {content:""; width:100%; height:100%; position:absolute; background-color:rgba(0, 0, 0, 0.5); bottom:1px;}
-.ValuePoints-wrapper{position: relative;}
-.common-banner h1{font-size: 80px; color: #fff;position: relative; z-index: 2;}
-.OurValues{margin-block: 100px;padding-inline: 5%;}
-.Values{height: 600px; width: 600px; border-radius: 50%; border: 2px dashed #145A98; margin:0 auto;position: relative; list-style: none; animation: circlePath 30s infinite linear; margin-block-start: 80px;}
-.Values li.ValuePoints{position: absolute; animation: circlePathBack 30s infinite linear;box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;background-color: #fff;padding: 10px; border-radius: 10px;display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.Values li.ValuePoints:nth-child(1){top: -50px; left: 40%; }
-.Values li.ValuePoints:nth-child(2){bottom: -50px; left: 40%; }
-.Values li.ValuePoints:nth-child(3){left: -50px; top: 40%; }
-.Values li.ValuePoints:nth-child(4){right: -50px; top: 40%;} 
-.Values li.ValuePoints .ValueImage{height: 100px; width: 100px;}
-.Values li.ValuePoints .ValueImage img{height: 100%; width: 100%;object-fit: contain;}
-.Values li.ValuePoints p{color: #145A98; font-size: 14px;text-align: center;font-weight: 600;}
-.ValueHead{position: absolute; left: 50%; transform: translateX(-50%);top: 50%; color: #145A98; font-weight: 600; font-size: 20px;}
-@keyframes circlePath {
-  0% {
-      transform: rotate(0deg) ;
-  }
-  100% {
-      transform: rotate(360deg);
-  }
+.img-section.about {
+    background: url('../../assets/images/rectangle25.png'), linear-gradient(#D9D9D9, #D9D9D9);
 }
+
+.commonBanner-wrapper {
+    position: relative;
+    margin-bottom: 67px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 34px 35px 80px 31px;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: end;
+    height: 100vh;
+}
+
+.commonBanner-wrapper.about {
+    background: url('../../assets/images/rectangle41.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
+.commonBanner-wrapper h2,
+.commonBanner-wrapper p {
+    color: #fff;
+    position: relative;
+    z-index: 2;
+}
+
+.commonBanner-wrapper h2 {
+    font-size: 4vw;
+}
+
+.commonBanner-wrapper::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    bottom: 1px;
+}
+
+.ValuePoints-wrapper {
+    position: relative;
+}
+
+.common-banner h1 {
+    font-size: 80px;
+    color: #fff;
+    position: relative;
+    z-index: 2;
+}
+
+.OurValues {
+    margin-block: 100px;
+    padding-inline: 5%;
+}
+
+.Values {
+    height: 600px;
+    width: 600px;
+    border-radius: 50%;
+    border: 2px dashed #145A98;
+    margin: 0 auto;
+    position: relative;
+    list-style: none;
+    animation: circlePath 30s infinite linear;
+    margin-block-start: 80px;
+}
+
+.Values li.ValuePoints {
+    position: absolute;
+    animation: circlePathBack 30s infinite linear;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Values li.ValuePoints:nth-child(1) {
+    top: -50px;
+    left: 40%;
+}
+
+.Values li.ValuePoints:nth-child(2) {
+    bottom: -50px;
+    left: 40%;
+}
+
+.Values li.ValuePoints:nth-child(3) {
+    left: -50px;
+    top: 40%;
+}
+
+.Values li.ValuePoints:nth-child(4) {
+    right: -50px;
+    top: 40%;
+}
+
+.Values li.ValuePoints .ValueImage {
+    height: 100px;
+    width: 100px;
+}
+
+.Values li.ValuePoints .ValueImage img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.Values li.ValuePoints p {
+    color: #145A98;
+    font-size: 14px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.ValueHead {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    color: #145A98;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+@keyframes circlePath {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @keyframes circlePathBack {
-  0% {
-      transform: rotate(360deg) ;
-  }
-  100% {
-      transform: rotate(0deg);
-  }
+    0% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 @media only screen and (max-width: 767px) {
-    .common-banner h1 {font-size:40px;}
-    .about-us-page .commonBanner-wrapper {height:52vh; justify-content:flex-end; padding:30px 5%;}
-    .OurValues {margin-block:50px;}
-    .Values {height:270px; width:270px;}
-    .Values li.ValuePoints:nth-child(1) {top:-30px;}
-    .Values li.ValuePoints:nth-child(2) {bottom:-30px;}
-    .Values li.ValuePoints:nth-child(3) {left:-30px;}
-    .Values li.ValuePoints:nth-child(4) {right:-30px;}
-    .Values li.ValuePoints {padding:4px;}
-    .Values li.ValuePoints .ValueImage {height:45px; width:45px;}
-    .Values li.ValuePoints p {font-size:11px;}
+    .common-banner h1 {
+        font-size: 40px;
+    }
+
+    .about-us-page .commonBanner-wrapper {
+        height: 52vh;
+        justify-content: flex-end;
+        padding: 30px 5%;
+    }
+
+    .OurValues {
+        margin-block: 50px;
+    }
+
+    .Values {
+        height: 270px;
+        width: 270px;
+    }
+
+    .Values li.ValuePoints:nth-child(1) {
+        top: -30px;
+    }
+
+    .Values li.ValuePoints:nth-child(2) {
+        bottom: -30px;
+    }
+
+    .Values li.ValuePoints:nth-child(3) {
+        left: -30px;
+    }
+
+    .Values li.ValuePoints:nth-child(4) {
+        right: -30px;
+    }
+
+    .Values li.ValuePoints {
+        padding: 4px;
+    }
+
+    .Values li.ValuePoints .ValueImage {
+        height: 45px;
+        width: 45px;
+    }
+
+    .Values li.ValuePoints p {
+        font-size: 11px;
+    }
 
 }
