--- a/frontend/src/Components/Gallery/Gallery.css
+++ b/frontend/src/Components/Gallery/Gallery.css
@@ -1,53 +1,5 @@
-.gallery-upper {
+.commonBanner-wrapper.gallery {
     background: url('../../assets/images/gallery.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
-    position: relative;
-    margin-bottom: 67px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 34px 35px 80px 31px;
-    width: 100%;
-    box-sizing: border-box;
-    justify-content: center;
-    height: 100vh;
-}
-
-.gallery-upper p {
-    position: relative;
-    /* z-index: 2; */
-    padding-left: 15%;
-    padding-right: 15%;
-    display: inline-block;
-    align-self: flex-start;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 300;
-    font-size: 24px;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-.gallery-upper h2 {
-    position: relative;
-    /* z-index: 2; */
-    margin-bottom: 16px;
-    line-height: 1.2;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 45px;
-    color: #FFFFFF;
-    text-align: center;
-    padding-top: 300px;
-}
-
-.gallery-upper::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    bottom: 1px;
 }
 
 .parent-container,
