--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -1,3 +1,24 @@
+/* Kaustav's Css START from here */
+.commonBanner-wrapper.contact {
+    background: url('../../assets/images/contact.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
+.commonBanner-wrapper.gallery {
+    background: url('../../assets/images/gallery.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
+.commonBanner-wrapper.governing {
+    background: url('../../assets/images/gb.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
+.commonBanner-wrapper.grievance {
+    background: url('../../assets/images/grivance.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
+.commonBanner-wrapper.service {
+    background: url('../../assets/images/service.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
+}
+
 /* Prity's Css START from here */
 .img-section.about {
     background: url('../../assets/images/rectangle25.png'), linear-gradient(#D9D9D9, #D9D9D9);
