--- a/frontend/src/Components/Service/Service.css
+++ b/frontend/src/Components/Service/Service.css
@@ -9,53 +9,59 @@
     margin-bottom: 100px;
 }
 
-.image-gallery h1 {
-    margin-block-end: 10px;
-    text-align: center;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-}
+
 
 .image-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    justify-items: center;
+   display: flex; flex-wrap: wrap; list-style: none; gap: 40px;padding-inline: 10%;
 }
 
-.image-container {
-    position: relative;
-    margin: 20px;
+.image-grid li{
+   position: relative;
+    width: calc((100% - 80px) / 3);
+    
 }
+.image-grid li .image-box{ position: relative;   width: 100%;
+    height: 250px;}
+.image-grid li .image-box:after{content: ''; position: absolute; right: -15px; bottom: -15px; height: 100%; width: 100%; border-radius: 20px; background-color: #3d76af44; z-index: -1;}
 
-.image-container img {
-    width: 200px;
-    height: 150px;
+.image-grid li img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     cursor: pointer;
     border-radius: 20px;
 }
 
-.image-container p {
-    margin-top: 10px;
-    font-family: 'Inter';
+.service-name {
+    margin-top: 30px;
+   
     font-weight: 300;
     color: #3D76AF;
 }
 
 .dropdown {
     position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    background-color: #000000b7;
     z-index: 1;
     padding: 10px;
-    width: 200px;
-    text-align: left;
+    width: 100%
   }
+  .dropdown p{color: #fff;font-weight: 600; text-align: center;}
+
+
+@media only screen and (max-width: 1024px) {
+  .image-grid li{position: relative;width: calc((100% - 40px) / 2);}
+
+}
+
+@media only screen and (max-width: 991px) {
+
+.image-grid li .image-box{height: 150px;}
+}
+@media only screen and (max-width: 575px) {
+    .image-grid{gap: 10px;padding-inline: 0%;}
+    .image-grid li{position: relative;width: 100%;}
+ }
