--- a/admin/src/Components/Admin/Sidebar.css
+++ b/admin/src/Components/Admin/Sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
   width: 250px;
+  height: auto;
   background-color: #145A98;
   color: white;
   padding: 15px;
@@ -29,6 +30,10 @@
   cursor: pointer;
   /* text-align: center; */
   transition: background-color 0.3s;
+}
+.sidebar ul li a {
+  text-decoration: none;
+  color: white;
 }
 
 .sidebar ul li:hover {
